--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					Blank
 				</div>
 				<div class="span4 about">
-					Foo About
+					About
 				</div>
 			</div>
 			<div class="row heading">
