Update index.html with info about Locations

--- a/index.html
+++ b/index.html
@@ -99,28 +99,28 @@
 				</div>
 			</div>
 			<div class="row-fluid pitch">
-				<div class="span5 offset1 video">
+<!--				<div class="span5 offset1 video">
 					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
+				</div>-->
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-				<div class="span5 actions">
+				<div class="span5 actions offset3">
 					<div class="span8 offset2">
 						<div class="statistics">
 							<div class="span4">
 								<!-- linediv-l and linediv-r give dividing lines that look
 								different in horizontal and vertical layouts, illustrating media queries. -->
 								<div class="linediv-l">
-									<h3>1000</h3><p>backers</p>
+									<h3>10</h3><p>backers</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-c">
-									<h3>$6000</h3><p>of $10,000</p>
+									<h3>$50</h3><p>of $10,000</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-r">
-									<h3>10</h3><p>days left</p>
+									<h3>30</h3><p>days left</p>
 								</div>
 							</div>
 						</div>
@@ -129,8 +129,8 @@
 						<!-- Bootstrap progress bar -->
 						<!-- http://twitter.github.io/bootstrap/components.html#progress -->
 						<div class="thermometer progress active">
-							<div class="bar bar-success" style="width: 60%;"></div>
-							<div class="bar bar-warning" style="width: 40%;"></div>
+							<div class="bar bar-success" style="width: 0.5%;"></div>
+							<div class="bar bar-warning" style="width: 99.5%;"></div>
 						</div>
 					</div>
 					<div class="span6 offset3 order">
@@ -153,21 +153,17 @@
 			<!-- http://placehold.it -->
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img src="http://i.imgur.com/6osphUd.png">
 				</div>
 				<div class="span5 copy">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justa velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						colutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagttis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
+						Locations is the mobile application. Now it available only for Android.
+						Program marks all you locations where have you been. With Locations
+						you can gather statistics when, where and how much time you spent there.
+						Locations can be used as notebook to store tasks to be performed after
+						arriving to desired location. For example, to buy milk at the store, you
+						create new task and when you reach the store, Locations will remind you
+						what you need to buy.
 					</p>
 				</div>
 			</div>
@@ -175,21 +171,14 @@
 			<div class="row-fluid section2">
 				<div class="span5 offset1 copy copy right">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-						porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-						mollis justa velit at nunc. Fusce nec egestas sem. Donec
-						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-						colutpat lorem ut congue malesuada. In facilisis scelerisque
-						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-						quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-						risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit. Donec porta, dui sagttis hendrerit
-						rutrum, nunc leo tempus nisl, eu mollis justo velit at
-						nunc. Fusce nec egestas sem. Donec fringilla.
+						In future releases we plan to add periodic renew your current location
+						on internet site. That your relatives and friends could know where
+						are you now. Also then they can create new notifications for you.
+						When you are at the specified location phone will notify you.
 					</p>
 				</div>
 				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://i.imgur.com/0typ56Y.png">
 				</div>
 			</div>
 
@@ -204,25 +193,12 @@
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse"
 									data-parent="#accordion2" href="#collapseOne">
-									What does FAQ stand for?
+									As quickly drains battery?
 								</a>
 							</div>
 							<div id="collapseOne" class="accordion=body collapse">
 								<div class="accordion-inner">
-									Frequently Asked Question.
-								</div>
-							</div>
-						</div>
-						<div class="accordion-group">
-							<div class="accordion-heading">
-								<a class="accordion-toggle" data-toggle="collapse"
-									data-parent="#accordion2" href="#collapseTwo">
-									What's a Frequently Asked Question?
-								</a>
-							</div>
-							<div id="collapseTwo" class="accordion=body collapse">
-								<div class="accordion-inner">
-									A question which is commonly asked by users.
+									You can adjust battery using: turn off GPS, decrease time of positioning and periodicity.
 								</div>
 							</div>
 						</div>
