--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
 			</div>
 			<div class="row-fluid pitch">
 <!--				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 				</div>-->
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 				<div class="span5 actions offset3">
+					<div class="row-fluid">
 					<div class="span8 offset2">
-						<div class="statistics">
+						<div class="row-fluid statistics">
 							<div class="span4">
 								<!-- linediv-l and linediv-r give dividing lines that look
 								different in horizontal and vertical layouts, illustrating media queries. -->
@@ -125,6 +126,7 @@
 							</div>
 						</div>
 					</div>
+					<div class="row-fluid">
 					<div class="span10 offset1">
 						<!-- Bootstrap progress bar -->
 						<!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -133,17 +135,23 @@
 							<div class="bar bar-warning" style="width: 99.5%;"></div>
 						</div>
 					</div>
+					</div>
+					<div class="row-fluid">
 					<div class="span6 offset3 order">
 						<!-- Standard Bootstrap button -->
 						<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
 						<button class="btn btn-success btn-large">Preorder</button>
 					</div>
+					</div>
+					<div class="row-fluid">
 					<div class="span8 offset2 social">
 						<!-- Social buttons are not included in default Bootstrap. -->
 						<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
 						<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 						<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 					</div>
+					</div>
+				</div>
 				</div>
 			</div>
 
@@ -153,7 +161,7 @@
 			<!-- http://placehold.it -->
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
-					<img src="http://i.imgur.com/6osphUd.png">
+					<img class="img-polaroid" alt="Screenshot1" src="http://i.imgur.com/6osphUd.png">
 				</div>
 				<div class="span5 copy">
 					<p>
@@ -178,7 +186,7 @@
 					</p>
 				</div>
 				<div class="span5 asset">
-					<img class="img-polaroid" src="http://i.imgur.com/0typ56Y.png">
+					<img class="img-polaroid" alt="Screenshot2" src="http://i.imgur.com/0typ56Y.png">
 				</div>
 			</div>
 
